# briefer

./: CLAUDE.md  README.md  manage.py  pyproject.toml  serve.sh
.claude/: settings.json
.claude/commands/: commit.md  devserver.md  test.md
actions/: base.py  todoist.py
briefer/: settings.py  urls.py  wsgi.py
core/: models.py  urls.py  views.py
core/management/commands/: delete_items.py  fetch_resources.py
core/migrations/: 0001_initial.py  0002_actionerror.py
core/templates/core/: action_error_detail.html  action_errors.html  base.html  card.html  history.html  stack.html
core/templates/registration/: login.html
resources/: base.py  fake.py  hackernews.py  news.py
tests/: conftest.py  test_delete_items_command.py  test_fetch_resources_command.py  test_frontend.py  test_hackernews_resource.py  test_models.py  test_news_resource.py  test_todoist_action.py  test_views.py
