[project]
name = "briefer"
version = "0.1.0"
description = "A self-hosted personal daily briefing web app"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "gunicorn>=22.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-playwright>=0.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "briefer.settings"
pythonpath = ["."]
